--- a/pages/about.html
+++ b/pages/about.html
@@ -4,14 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playground</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <title>Document</title>
 </head>
 
 <body>
-
+    <h1>About Page</h1>
 </body>
-<h1>Playground Home</h1>
-<img class="musashi" src="images/musashi.jpg">
 
 </html>
